<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.alexandertsebenko.lesson2_homework.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center|top"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_name"
            android:textColor="@color/text_color"
            android:id="@+id/textView"
            android:layout_gravity="center|top"
            android:textSize="@dimen/header1_size"
            />

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/buttonflat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2e7d32"
            android:text="@string/button1_name"
            android:onClick="onClickButton1"
            android:layout_gravity="left"
            />

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/buttonflat3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2e7d32"
            android:text="@string/button3_name"
            android:onClick="onClickButton3"
            android:layout_gravity="left"
            />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2e7d32"
            android:layout_gravity="left"
            android:text="@string/button4_name" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/avatar"
            android:layout_gravity="bottom|center_vertical"
            android:adjustViewBounds="false"
            android:scaleType="center"/>

    </LinearLayout>

</RelativeLayout>
